fixing alignment on product card and removing CSS not being used

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -9,8 +9,6 @@ body {
 .badge {
     padding-left: 9px;
     padding-right: 9px;
-    /* -webkit-border-radius: 9px;
-    -moz-border-radius: 9px; */
     border-radius: 9px;
 }
 
@@ -150,14 +148,11 @@ footer a {
     text-align: center;
 }
 
-.card-footer {
-    background-color: white;
-    border-color: white;
-    position:absolute;
-    bottom:10px;
-    /* margin-left: 25%;
-    margin-bottom: 10px; */
+.card-bottom {
+    padding-bottom: 20px;
 }
+
+
 
 .product-title{
 	font-size: 20px;
